fixed margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1440,6 +1440,9 @@
     margin: auto; }
     #services .services__gallery .row--first {
       margin-bottom: 5%; }
+      @media only screen and (max-width: 768px) {
+        #services .services__gallery .row--first {
+          margin-bottom: 0; } }
     #services .services__gallery .row--second {
       margin-bottom: 5%; }
       @media (min-width: 992px) {
